--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,10 +106,30 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
     
-    - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
+    - name: Cache Go modules
+      uses: actions/cache@v3
       with:
-        args: ./...
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+    
+    - name: Download dependencies
+      run: go mod download
+    
+    - name: Install gosec
+      run: |
+        curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
+        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+    
+    - name: Run Gosec Security Scanner
+      run: gosec -fmt sarif -out results.sarif ./... || true
+        
+    - name: Upload SARIF file
+      if: always() && hashFiles('results.sarif') != ''
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: results.sarif
 
   build:
     name: Build
