--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,13 +117,11 @@ jobs:
     - name: Download dependencies
       run: go mod download
     
-    - name: Install gosec
-      run: |
-        curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
-        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-    
     - name: Run Gosec Security Scanner
-      run: gosec -fmt sarif -out results.sarif ./... || true
+      uses: securecodewarrior/github-action-gosec@master
+      with:
+        args: '-fmt sarif -out results.sarif ./...'
+        continue-on-error: true
         
     - name: Upload SARIF file
       if: always() && hashFiles('results.sarif') != ''
