Fix golangci-lint configuration for CI compatibility
- Remove unsupported 'shadow' standalone linter (it's part of govet)
- Remove 'typecheck' linter that doesn't exist in v1.64.8
- Simplify configuration to work with CI version
- Fix output format configuration
- Remove deprecated linters and formatters

This should resolve the 'unknown linters: shadow' error in GitHub Actions.

--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,11 @@ credentials
 *.sqlite
 
 # Test coverage
+coverage.out
 coverage.html
+coverage-enhanced.html
+coverage-*.html
+coverage-*.svg
 coverage.txt
 
 # Docker
