--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,6 +169,7 @@ jobs:
       with:
         context: .
         push: false
+        load: true
         tags: bogowi-api:test
         cache-from: type=gha
         cache-to: type=gha,mode=max
