feat: add BOGORewardDistributor contract and deployment scripts
- Add BOGORewardDistributor smart contract with reward distribution logic
- Include deployment scripts for reward distributor contract
- Add utility scripts for contract interaction (funding, whitelisting, etc)
- Set up Hardhat configuration with network settings
- Add .gitignore for contract development environment


Former-commit-id: b7145b6ced2a8a4bce2bc6b2d1c7f9703b7a6926

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,10 @@ coverage.txt
 
 # Kubernetes secrets
 secrets/
+nice-coverage.html
+contracts/.env.example
+docs/reward-system/REWARD_CONTRACT_DEPLOYMENT_PLAN.txt
+docs/reward-system/REWARD_SYSTEM_IMPLEMENTATION_PLAN.md
+docs/reward-system/REWARD_TEMPLATES_PLAN.txt
+docs/reward-system/state-28-july.txt
+contracts/.env.example
