feat: add mint-full-supply script and update dependencies
- Add new script for minting full BOGO token supply with role checks and allocations
- Update OpenZeppelin contracts to v4.9.6 in package.json
- Fix import paths for security-related OpenZeppelin contracts
- Add Postman collection to gitignore
- Change service restart in deploy workflow to ensure binary reload


Former-commit-id: b2571e6dd1962893cc93ab49fe6e5ca54a71a055

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -204,9 +204,9 @@ jobs:
         sudo chown ec2-user:ec2-user bogowi-api-linux || true
         chmod +x bogowi-api-linux
         
-        # Start the service
-        echo "Starting Go API service..."
-        sudo systemctl start bogowi
+        # Restart the service (force reload of new binary)
+        echo "Restarting Go API service..."
+        sudo systemctl restart bogowi
         
         # Wait for service to be ready
         echo "Waiting for API to be ready..."
