feat(reward-distributor): replace single owner with multisig treasury control
refactor(reward-distributor): update constructor to require treasury address
fix(reward-distributor): replace onlyOwner with onlyTreasury modifier
docs(reward-distributor): add treasurySweep function for token migration
test(reward-distributor): update tests for multisig integration

chore: add deployment scripts for multisig treasury
chore: add utility scripts for analyzing old distributor
chore: update hardhat config and package.json for testing

Former-commit-id: 0e402f33c4cb5c3836b9f7e14c6b7579843d1f1f

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,7 +15,9 @@
     "setup-backend": "hardhat run scripts/setup-backend.js",
     "setup-backend:columbus": "hardhat run scripts/setup-backend.js --network columbus",
     "whitelist": "hardhat run scripts/whitelist-founders.js",
-    "whitelist:columbus": "hardhat run scripts/whitelist-founders.js --network columbus"
+    "whitelist:columbus": "hardhat run scripts/whitelist-founders.js --network columbus",
+    "test": "hardhat test",
+    "coverage": "hardhat coverage"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
@@ -26,6 +28,7 @@
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
-    "hardhat": "^2.19.0"
+    "hardhat": "^2.19.0",
+    "solidity-coverage": "^0.8.16"
   }
 }
