feat(contracts): add reentrancy protection and referral tracking
- Add ReentrancyGuard to TokenRescuer and BOGORewardDistributor functions
- Implement circular referral detection and depth tracking in BOGORewardDistributor
- Update CommercialNFT to use contract address for royalties and add treasury management
- Add comprehensive test coverage for reentrancy protection, referral logic, and edge cases


Former-commit-id: 57a3c7c4df1a255b8459220c51af28c15585054b

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ docs/reward-system/REWARD_TEMPLATES_PLAN.txt
 docs/reward-system/state-28-july.txt
 contracts/.env.example
 docs/BOGOWI_ACTUAL_API_Postman_Collection.json
+docs/backend-to-backend-api.txt
