--- a/contracts/package.json
+++ b/contracts/package.json
@@ -30,5 +30,8 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.19.0",
     "solidity-coverage": "^0.8.16"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0"
   }
 }
