feat(contracts): implement centralized role management system
Add RoleManager contract for centralized role management across ecosystem
Implement RoleManaged base contract for role-based access control
Create BOGOTokenV2_RoleManaged with role-based minting and timelock
Add BOGORewardDistributor_RoleManaged with reward templates and referral system
Include comprehensive tests for RoleManager functionality


Former-commit-id: 1e2eba1089c1b69ea94911ca867c4448ae06c240

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ docs/reward-system/state-28-july.txt
 contracts/.env.example
 docs/BOGOWI_ACTUAL_API_Postman_Collection.json
 docs/backend-to-backend-api.txt
+BOGOWI_CONTRACTS_TECHNICAL_ANALYSIS.txt
+contracts/.env.example
