--- a/contracts/v1/package.json
+++ b/contracts/v1/package.json
@@ -6,7 +6,25 @@
     "test": "hardhat test",
     "coverage": "hardhat coverage",
     "compile": "hardhat compile",
-    "clean": "hardhat clean"
+    "clean": "hardhat clean",
+    "deploy": "hardhat run scripts/deploy-all.js",
+    "deploy:testnet": "hardhat run scripts/deploy-all.js --network columbus",
+    "deploy:mainnet": "hardhat run scripts/deploy-all.js --network camino",
+    "register": "hardhat run scripts/register-contracts.js",
+    "register:testnet": "hardhat run scripts/register-contracts.js --network columbus",
+    "register:mainnet": "hardhat run scripts/register-contracts.js --network camino",
+    "setup-roles": "hardhat run scripts/setup-roles.js",
+    "setup-roles:testnet": "hardhat run scripts/setup-roles.js --network columbus",
+    "setup-roles:mainnet": "hardhat run scripts/setup-roles.js --network camino",
+    "mint-supply": "hardhat run scripts/mint-initial-supply.js",
+    "mint-supply:testnet": "hardhat run scripts/mint-initial-supply.js --network columbus",
+    "mint-supply:mainnet": "hardhat run scripts/mint-initial-supply.js --network camino",
+    "fund-distributor": "hardhat run scripts/fund-distributor.js",
+    "fund-distributor:testnet": "hardhat run scripts/fund-distributor.js --network columbus",
+    "fund-distributor:mainnet": "hardhat run scripts/fund-distributor.js --network camino",
+    "verify-deployment": "hardhat run scripts/verify-deployment.js",
+    "verify-deployment:testnet": "hardhat run scripts/verify-deployment.js --network columbus",
+    "verify-deployment:mainnet": "hardhat run scripts/verify-deployment.js --network camino"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
