--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,6 +106,14 @@ jobs:
       with:
         name: bogowi-api-linux
     
+    - name: Generate version
+      id: version
+      run: |
+        # Get current date and run number
+        VERSION="1.0.$(date +%Y%m%d).${{ github.run_number }}"
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "Generated version: $VERSION"
+    
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -186,8 +194,9 @@ jobs:
         # Make binary executable
         chmod +x bogowi-api-linux
         
-        # Create deployment script
-        cat > deploy.sh << 'SCRIPT'
+        # Create deployment script with version
+        VERSION="${{ steps.version.outputs.version }}"
+        cat > deploy.sh << SCRIPT
         #!/bin/bash
         set -e
         
@@ -205,11 +214,12 @@ jobs:
         # Update build info
         echo "Updating build info..."
         echo '{
-          "version": "'${{ github.ref_name }}'",
+          "version": "'${VERSION}'",
           "build_date": "'$(date -u +%Y-%m-%dT%H:%M:%SZ)'",
           "last_commit": "'${{ github.sha }}'",
           "commit_message": '"$(echo "${{ github.event.head_commit.message }}" | sed 's/"/\\"/g' | head -1)"',
-          "branch": "'${{ github.ref_name }}'"
+          "branch": "'${{ github.ref_name }}'",
+          "build_number": '${{ github.run_number }}'
         }' | sudo tee /var/www/html/build-info.json
         
         # Restart API service
