fix(deploy): stop service before replacing binary to avoid 'text file busy' error
Former-commit-id: 122c1eb98246b27b3549c1c90c6678acedeb8b1b

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,6 +206,10 @@ jobs:
         # Navigate to home directory
         cd /home/ec2-user
         
+        # Stop service before replacing binary
+        echo "Stopping API service..."
+        sudo systemctl stop bogowi-api || true
+        
         # Deploy new API binary
         echo "Deploying new API binary..."
         sudo cp /tmp/bogowi-api-linux /usr/local/bin/bogowi-api
