fix: update GitHub Actions cache keys to resolve tar extraction errors
- Change cache key version from 'go-' to 'go-v2-' in all workflows
- This forces a fresh cache and resolves 'Cannot open: File exists' errors
- Updates both CI and Deploy workflows


Former-commit-id: 6ffc172acbbb1ce0fe418b2bbc33bd7d8fead626

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,10 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        key: ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
         restore-keys: |
-          ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
-          ${{ runner.os }}-go-
+          ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-
+          ${{ runner.os }}-go-v2-
     
     - name: Download dependencies
       run: go mod download
@@ -73,10 +73,10 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        key: ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
         restore-keys: |
-          ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
-          ${{ runner.os }}-go-
+          ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-
+          ${{ runner.os }}-go-v2-
     
     - name: Download dependencies
       run: go mod download
@@ -124,10 +124,10 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        key: ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
         restore-keys: |
-          ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
-          ${{ runner.os }}-go-
+          ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-
+          ${{ runner.os }}-go-v2-
     
     - name: Download dependencies
       run: go mod download
