feat(scripts): add utility scripts for reward distributor management
- Add check-distributor-balance.js to monitor token balances and allocation
- Add check-transaction.js to decode and analyze reward transactions
- Add refund-distributor.js to refill distributor balance when needed
- Update hardhat config to use MAINNET_PRIVATE_KEY and root .env path
- Rename BOGOTokenV2 references to BOGOToken in SDK
- Update package.json with new script commands


Former-commit-id: 9bb3190a20106b6f659f2e38c254d96958ca1f0b

--- a/contracts/v1/package.json
+++ b/contracts/v1/package.json
@@ -11,20 +11,26 @@
     "deploy:testnet": "hardhat run scripts/deploy-all.js --network columbus",
     "deploy:mainnet": "hardhat run scripts/deploy-all.js --network camino",
     "register": "hardhat run scripts/register-contracts.js",
-    "register:testnet": "hardhat run scripts/register-contracts.js --network columbus",
-    "register:mainnet": "hardhat run scripts/register-contracts.js --network camino",
+    "register:testnet": "hardhat run scripts/register-contracts.js --network testnet",
+    "register:mainnet": "hardhat run scripts/register-contracts.js --network mainnet",
     "setup-roles": "hardhat run scripts/setup-roles.js",
-    "setup-roles:testnet": "hardhat run scripts/setup-roles.js --network columbus",
-    "setup-roles:mainnet": "hardhat run scripts/setup-roles.js --network camino",
+    "setup-roles:testnet": "hardhat run scripts/setup-roles.js --network testnet",
+    "setup-roles:mainnet": "hardhat run scripts/setup-roles.js --network mainnet",
     "mint-supply": "hardhat run scripts/mint-initial-supply.js",
-    "mint-supply:testnet": "hardhat run scripts/mint-initial-supply.js --network columbus",
-    "mint-supply:mainnet": "hardhat run scripts/mint-initial-supply.js --network camino",
+    "mint-supply:testnet": "hardhat run scripts/mint-initial-supply.js --network testnet",
+    "mint-supply:mainnet": "hardhat run scripts/mint-initial-supply.js --network mainnet",
     "fund-distributor": "hardhat run scripts/fund-distributor.js",
-    "fund-distributor:testnet": "hardhat run scripts/fund-distributor.js --network columbus",
-    "fund-distributor:mainnet": "hardhat run scripts/fund-distributor.js --network camino",
+    "fund-distributor:testnet": "hardhat run scripts/fund-distributor.js --network testnet",
+    "fund-distributor:mainnet": "hardhat run scripts/fund-distributor.js --network mainnet",
     "verify-deployment": "hardhat run scripts/verify-deployment.js",
-    "verify-deployment:testnet": "hardhat run scripts/verify-deployment.js --network columbus",
-    "verify-deployment:mainnet": "hardhat run scripts/verify-deployment.js --network camino"
+    "verify-deployment:testnet": "hardhat run scripts/verify-deployment.js --network testnet",
+    "verify-deployment:mainnet": "hardhat run scripts/verify-deployment.js --network mainnet",
+    "check-balance": "hardhat run scripts/check-distributor-balance.js",
+    "check-balance:testnet": "hardhat run scripts/check-distributor-balance.js --network testnet",
+    "check-balance:mainnet": "hardhat run scripts/check-distributor-balance.js --network mainnet",
+    "refund-distributor": "hardhat run scripts/refund-distributor.js",
+    "refund-distributor:testnet": "hardhat run scripts/refund-distributor.js --network testnet",
+    "refund-distributor:mainnet": "hardhat run scripts/refund-distributor.js --network mainnet"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
