fix: correct deployment path for API binary
- Deploy binary to /opt/bogowi/bogowi-api where systemd service expects it
- Previously was deploying to /usr/local/bin/bogowi-api which wasn't being used
- Add symlink for backward compatibility
- This fixes the issue where new deployments weren't actually updating the running API


Former-commit-id: db64b78e2ce1854cbd59183877fd9fb0cd4896ea

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -210,10 +210,14 @@ jobs:
         echo "Stopping API service..."
         sudo systemctl stop bogowi-api || true
         
-        # Deploy new API binary
-        echo "Deploying new API binary..."
-        sudo cp /tmp/bogowi-api-linux /usr/local/bin/bogowi-api
-        sudo chmod +x /usr/local/bin/bogowi-api
+        # Deploy new API binary to correct location
+        echo "Deploying new API binary to /opt/bogowi/..."
+        sudo mkdir -p /opt/bogowi
+        sudo cp /tmp/bogowi-api-linux /opt/bogowi/bogowi-api
+        sudo chmod +x /opt/bogowi/bogowi-api
+        
+        # Also update the symlink in /usr/local/bin for backward compatibility
+        sudo ln -sf /opt/bogowi/bogowi-api /usr/local/bin/bogowi-api
         
         # Update build info
         echo "Updating build info..."
