fix: resolve GitHub Actions cache extraction errors
- Simplified cache key to only use go.sum hash (removed Go files hash)
- Incremented cache version from v2 to v3 to invalidate old problematic caches
- Updated cache action from v3 to v4 in deploy.yml for consistency
- This fixes the 'Cannot open: File exists' tar extraction errors


Former-commit-id: fa5633afe2f3745edcfdcf9c198dcfe8ff16d1b9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,9 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        key: ${{ runner.os }}-go-v3-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-
-          ${{ runner.os }}-go-v2-
+          ${{ runner.os }}-go-v3-
     
     - name: Download dependencies
       run: go mod download
@@ -73,10 +72,9 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        key: ${{ runner.os }}-go-v3-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-
-          ${{ runner.os }}-go-v2-
+          ${{ runner.os }}-go-v3-
     
     - name: Download dependencies
       run: go mod download
@@ -124,10 +122,9 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/*.go') }}
+        key: ${{ runner.os }}-go-v3-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-v2-${{ hashFiles('**/go.sum') }}-
-          ${{ runner.os }}-go-v2-
+          ${{ runner.os }}-go-v3-
     
     - name: Download dependencies
       run: go mod download
