Add unit tests for NFT transfers and approvals
- Implemented tests for Approve, SetApprovalForAll, GetApproved, and IsApprovedForAll functions in transfers_simple_test.go.
- Created comprehensive tests for Transfer, SafeTransfer, and SafeTransferWithData functions in transfers_test.go.
- Added mock implementations for the TicketsContract and EthClient to facilitate testing.
- Enhanced existing tests in types_test.go and ticket_metadata_test.go for better coverage and validation.
- Updated main.go to initialize the API server with a unified router configuration.
- Added a new script for minting tickets.


Former-commit-id: 3e282f7590302db51c49438c8186f28326cb07a6

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ contracts/v1/scripts/DEPLOYMENT_PLAN.md
 .env.v1.multi-network.example
 .env.v1.example
 .env.dev
+# Compiled example binaries
+examples/mint_ticket
+examples/query_tickets
+examples/redeem_ticket
+examples/transfer_tickets
