feat(database): implement SQLite database for NFT mappings
- Added SQLite database implementation in internal/database/sqlite.go
- Created NFTMapping struct to represent the mapping between blockchain token ID and Datakyte NFT ID
- Implemented methods for saving, retrieving, and updating NFT mappings
- Added schema initialization for the database
- Implemented concurrency control using mutexes

test(database): add unit tests for SQLite database operations

- Created unit tests for database operations in internal/database/sqlite_test.go
- Tested saving and retrieving NFT mappings, updating status, and redemption
- Verified retrieval of user NFTs and handling of non-existent mappings

feat(storage): implement Google Cloud Storage image service

- Added GCSImageService for handling image uploads and processing
- Implemented methods for uploading images, generating signed URLs, and deleting images
- Added image validation and processing (resize and optimize) functionality

chore(scripts): add scripts for local API and storage testing

- Created run-local-api.sh to start the API with local blockchain configuration
- Added test-storage.sh to validate Google Cloud Storage setup and permissions


Former-commit-id: 790a454d265e9f858554345218003f62406d7dbd

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,16 @@ go.work
 .env.local
 .env.production
 .env.test
+.env.testnet
+.env.mainnet
+
+# Service account credentials - NEVER COMMIT THESE!
+*-service-account.json
+testnet-service-account.json
+mainnet-service-account.json
+service-account-*.json
+credentials.json
+*.json
 
 # IDE and editor files
 .vscode/
@@ -76,6 +86,7 @@ credentials
 # Database files
 *.db
 *.sqlite
+.bogowi/
 
 # Test coverage
 coverage.out
