chore: prepare public repository version
- Remove sensitive CI/CD configurations
- Exclude environment files and credentials
- Update documentation for public consumption
- Add enhanced gitignore for security


Former-commit-id: 1dccb0820790da58f81fd7da62a077f4a67c2b32

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,18 @@ examples/mint_ticket
 examples/query_tickets
 examples/redeem_ticket
 examples/transfer_tickets
+
+# Additional security for public repo
+*.key
+*.pem
+*.p12
+*-service-account.json
+credentials.json
+.env*
+deploy/
+scripts/deploy/
+scripts/*deploy*
+scripts/*prod*
+docs/DEPLOYMENT_*.md
+docs/INTERNAL_*.md
+docs/*_INTERNAL.md
